@@ -34,10 +34,7 @@ import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MvcResult;
-import org.springframework.test.web.servlet.request.MockMultipartHttpServletRequestBuilder;
 import org.springframework.util.LinkedMultiValueMap;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import de.tum.cit.aet.artemis.assessment.domain.AssessmentType;
 import de.tum.cit.aet.artemis.communication.domain.conversation.Channel;
@@ -130,9 +127,6 @@ class QuizExerciseIntegrationTest extends AbstractQuizExerciseIntegrationTest {
 
     @Autowired
     private ExerciseService exerciseService;
-
-    @Autowired
-    private ObjectMapper objectMapper;
 
     @Autowired
     private ChannelRepository channelRepository;
@@ -377,7 +371,7 @@ class QuizExerciseIntegrationTest extends AbstractQuizExerciseIntegrationTest {
         QuizExercise quizExercise = quizExerciseUtilService.createQuiz(ZonedDateTime.now().plusHours(5), null, QuizMode.SYNCHRONIZED);
         quizExercise.getQuizQuestions().stream().filter(q -> q instanceof ShortAnswerQuestion).findFirst().ifPresent(q -> {
             ShortAnswerQuestion sa = (ShortAnswerQuestion) q;
-            sa.getSpots().get(0).setTempID(null);
+            sa.getSpots().getFirst().setTempID(null);
         });
         createQuizExerciseWithFiles(quizExercise, HttpStatus.BAD_REQUEST, true);
     }
@@ -399,7 +393,7 @@ class QuizExerciseIntegrationTest extends AbstractQuizExerciseIntegrationTest {
         QuizExercise quizExercise = quizExerciseUtilService.createQuiz(ZonedDateTime.now().plusHours(5), null, QuizMode.SYNCHRONIZED);
         quizExercise.getQuizQuestions().stream().filter(q -> q instanceof MultipleChoiceQuestion).findFirst().ifPresent(q -> {
             MultipleChoiceQuestion mc = (MultipleChoiceQuestion) q;
-            mc.getAnswerOptions().get(0).setText(null);
+            mc.getAnswerOptions().getFirst().setText(null);
         });
         createQuizExerciseWithFiles(quizExercise, HttpStatus.BAD_REQUEST, true);
     }
@@ -450,7 +444,6 @@ class QuizExerciseIntegrationTest extends AbstractQuizExerciseIntegrationTest {
     @EnumSource(QuizMode.class)
     void testUpdateQuizExercise_partialTitleUpdate(QuizMode quizMode) throws Exception {
         QuizExercise quizExercise = createQuizOnServer(ZonedDateTime.now().plusHours(5), null, quizMode);
-        String originalTitle = quizExercise.getTitle();
         Integer originalDuration = quizExercise.getDuration();
 
         quizExercise.setTitle("Patched Title");
@@ -512,29 +505,6 @@ class QuizExerciseIntegrationTest extends AbstractQuizExerciseIntegrationTest {
         quizExercise.getQuizQuestions().add(newQuestion);
 
         updateQuizExerciseWithFiles(quizExercise, List.of(), HttpStatus.BAD_REQUEST, null);
-    }
-
-    private void addFilesToBuilderAndModifyExercise(MockMultipartHttpServletRequestBuilder builder, QuizExercise quizExercise, boolean addBackgroundImage) {
-        int index = 0;
-        for (var question : quizExercise.getQuizQuestions()) {
-            if (question instanceof DragAndDropQuestion dragAndDropQuestion) {
-                if (addBackgroundImage) {
-                    String backgroundFileName = "backgroundImage" + index++ + ".jpg";
-                    dragAndDropQuestion.setBackgroundFilePath(backgroundFileName);
-                    builder.file(new MockMultipartFile("files", backgroundFileName, MediaType.IMAGE_JPEG_VALUE, "backgroundImage".getBytes()));
-                }
-                else {
-                    dragAndDropQuestion.setBackgroundFilePath(null);
-                }
-                for (var dragItem : dragAndDropQuestion.getDragItems()) {
-                    if (dragItem.getPictureFilePath() != null) {
-                        String filename = "dragItemImage" + index++ + ".png";
-                        dragItem.setPictureFilePath(filename);
-                        builder.file(new MockMultipartFile("files", filename, MediaType.IMAGE_PNG_VALUE, "dragItemImage".getBytes()));
-                    }
-                }
-            }
-        }
     }
 
     @ParameterizedTest(name = "{displayName} [{index}] {argumentsWithNames}")
